Added number of students for each year per category.